--- a/BlockChainWallet/BlockChainWallet/zh-Hant.lproj/Main.strings
+++ b/BlockChainWallet/BlockChainWallet/zh-Hant.lproj/Main.strings
@@ -97,3 +97,18 @@
 
 /* Class = "UILabel"; text = "备份助记词"; ObjectID = "xAn-yv-rOV"; */
 "xAn-yv-rOV.text" = "備份助記詞";
+
+/* Class = "UIButton"; normalTitle = "恢复身份"; ObjectID = "l0f-sw-jfs"; */
+"l0f-sw-jfs.normalTitle" = "恢復身份";
+
+/* Class = "UILabel"; text = "恢复身份"; ObjectID = "N3m-2h-vdR"; */
+"N3m-2h-vdR.text" = "恢復身份";
+
+/* Class = "UILabel"; text = "你讲会拥有身份下的多链钱包，比如ETH、BTC"; ObjectID = "0c7-RR-nTr"; */
+"0c7-RR-nTr.text" = "你將會擁有身份下的多鏈錢包，比如ETH、BTC";
+
+/* Class = "UITextField"; placeholder = "重复输入密码"; ObjectID = "fuv-Aj-DuK"; */
+"fuv-Aj-DuK.placeholder" = "重複輸入密碼";
+
+/* Class = "UITextField"; placeholder = "密码"; ObjectID = "W2J-WU-58I"; */
+"W2J-WU-58I.placeholder" = "密碼";
