--- a/BlockChainWallet/BlockChainWallet/ja.lproj/Main.strings
+++ b/BlockChainWallet/BlockChainWallet/ja.lproj/Main.strings
@@ -97,3 +97,18 @@
 
 /* Class = "UILabel"; text = "备份助记词"; ObjectID = "xAn-yv-rOV"; */
 "xAn-yv-rOV.text" = "バックアップニーモニック";
+
+/* Class = "UIButton"; normalTitle = "恢复身份"; ObjectID = "l0f-sw-jfs"; */
+"l0f-sw-jfs.normalTitle" = "アイデンティティを復元する";
+
+/* Class = "UILabel"; text = "恢复身份"; ObjectID = "N3m-2h-vdR"; */
+"N3m-2h-vdR.text" = "アイデンティティを復元する";
+
+/* Class = "UILabel"; text = "你讲会拥有身份下的多链钱包，比如ETH、BTC"; ObjectID = "0c7-RR-nTr"; */
+"0c7-RR-nTr.text" = "あなたはETH、BTCなどのあなたのアイデンティティの下にマルチチェーンウォレットを持っています";
+
+/* Class = "UITextField"; placeholder = "重复输入密码"; ObjectID = "fuv-Aj-DuK"; */
+"fuv-Aj-DuK.placeholder" = "パスワードを再度入力してください";
+
+/* Class = "UITextField"; placeholder = "密码"; ObjectID = "W2J-WU-58I"; */
+"W2J-WU-58I.placeholder" = "パスワード";
