change concurrent code style to async/await

--- a/BlockChainWallet/BlockChainWallet/en.lproj/Localization.strings
+++ b/BlockChainWallet/BlockChainWallet/en.lproj/Localization.strings
@@ -53,4 +53,5 @@
 "DApp_transactionCanceled" = "Transaction cancelled";
 "DApp_applyForAuthorization" = "Apply for authorization";
 "DApp_applyForAuthorizationDetail" = "apply for transfer authorization";
+"DApp_transactionFailed" = "Redemption failed";
 "Transfer_InputPwdRemind" = "Please enter your identity password";
